--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="#contact">Contact Us</a>
         </nav>
 
+        <div id="menu-btn" class="fas fa-bars"></div>
+
     </header>
     <!-- header section ends -->
 
