--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     </header>
     <!-- header section ends -->
 
-
+    <!-- home section starts -->
+        <section class="home">
+            
+        </section>
     <!-- custom script file link -->
     <script src="./script/script.js"></script>
 </body>
