--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#about">About</a>
             <a href="#team">Team</a>
             <a href="#book">Book</a>
-            <a href="#contact">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
@@ -32,12 +32,12 @@
     <!-- home section starts -->
         <section class="home" id="home">
             <div class="image">
-                <img src="image/home-img.jpg" alt="">
+                <img src="assets/home-img.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Stay Safe , Stay Healthy</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptate tempora ducimus consequuntur placeat </p>
-                <a href="#" class="btn"> Contact Us <span class="fas fa-chevron-right"></span></a>
+                <h3>Empowering Minds</h3>
+                <p>We offer comprehensive counselling services to help individuals navigate through life's challenges </p>
+                <a href="contact.html" class="btn"> Contact Us <span class="fas fa-chevron-right"></span></a>
             </div>
         </section>
     <!-- home section ends -->
@@ -46,15 +46,15 @@
         <section class="icons-container">
 
             <div class="icons">
-                <i class="fas fa-user-md"></i>
-                <h3>140+</h3>
-                <p>Doctors at work</p>
+                <i class="fa fa-user"></i>
+                <h3>20+</h3>
+                <p>Member of team</p>
             </div>
 
             <div class="icons">
                 <i class="fas fa-users"></i>
-                <h3>1040+</h3>
-                <p>Satisfied Patients</p>
+                <h3>140+</h3>
+                <p>Satisfied Client</p>
             </div>
 
             <div class="icons">
@@ -79,33 +79,33 @@
 
                 <div class="box">
                     <i class="fas fa-notes-medical"></i>
-                    <h3>Free Checkups</h3>
+                    <h3>Financial Counselling</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
                     <i class="fas fa-ambulance"></i>
-                    <h3>Free Checkups</h3>
+                    <h3>Education Counselling</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
                     <i class="fas fa-user-md"></i>
-                    <h3>Free Checkups</h3>
+                    <h3>Career Counselling</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
                     <i class="fas fa-pills"></i>
-                    <h3>Free Checkups</h3>
+                    <h3>Personal Growth Counselling</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
-                <div class="box">
+                <!-- <div class="box">
                     <i class="fas fa-procedures"></i>
                     <h3>Free Checkups</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
@@ -117,7 +117,7 @@
                     <h3>Free Checkups</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
-                </div>
+                </div> -->
 
 
             </div>
