--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="icons">
                 <i class="fa fa-user"></i>
                 <h3>20+</h3>
-                <p>Member of team</p>
+                <p>Members of team</p>
             </div>
 
             <div class="icons">
@@ -58,15 +58,15 @@
             </div>
 
             <div class="icons">
-                <i class="fas fa-procedures"></i>
+                <i class="fa fa-cart-arrow-down"></i>
                 <h3>500+</h3>
-                <p>Bed Facility</p>
+                <p>Facility</p>
             </div>
 
             <div class="icons">
                 <i class="fas fa-hospital"></i>
-                <h3>80+</h3>
-                <p>Available Hospitals</p>
+                <h3>40+</h3>
+                <p>Available Therapy</p>
             </div>
 
         </section>
@@ -78,30 +78,30 @@
             <div class="box-container">
 
                 <div class="box">
-                    <i class="fas fa-notes-medical"></i>
+                    <i class="fa fa-credit-card"></i>
                     <h3>Financial Counselling</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+                    <p> Achieve financial stability and make informed decisions about your money with our expert financial counselling services. </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
-                    <i class="fas fa-ambulance"></i>
+                    <i class="fa fa-book"></i>
                     <h3>Education Counselling</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+                    <p> Make the right educational choices with the help of our qualified counsellors who will help you out to choose the right path. </p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
-                    <i class="fas fa-user-md"></i>
+                    <i class="fa fa-briefcase"></i>
                     <h3>Career Counselling</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+                    <p> Discover your true potential and find the career path that aligns with your skills and interests with the help of our career counsellors.</p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
                 <div class="box">
-                    <i class="fas fa-pills"></i>
+                    <i class="fa fa-line-chart"></i>
                     <h3>Personal Growth Counselling</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+                    <p> Unlock potential with our counseling. Enhance self-awareness, improve relationships, and grow personally in a supportive environment.</p>
                     <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
                 </div>
 
