developers section added and about section completed

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         </section>
     <!-- Service section ends -->
 
-    <!-- About section starts -->
-        <section class="about" id="about">
+<!-- About section starts -->
+    <section class="about" id="about">
 
-            <h1 class="heading"> <span>about</span> us </h1>
-
-            <div class="image" id="about-img">
+        <h1 class="heading"> <span>about</span> us </h1>
+        <div class="row">
+            <div class="image">
                 <img src="image/about-img.jpg" alt="">
             </div>
 
@@ -139,8 +139,88 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione cum dolor totam voluptates officia officiis reiciendis vitae </p>
                 <a href="#" class="btn"> <span class="fas fa-chevron-right"></span> learn more</a>
             </div>
-        </section>
-    <!-- About section ends -->
+        </div>
+    </section>
+<!-- About section ends -->
+
+<!-- Doctor section Starts -->
+    <section class="doctors" id="doctors">
+
+        <h1 class="heading"> our <span>developers</span> </h1>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="image/doc-1.jpeg" alt="">
+                <h3>Pritam Kumar</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/doc-2.jpeg" alt="">
+                <h3>Monalisa Rout</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/doc-3.jpeg" alt="">
+                <h3>Praveen kumar</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/doc-4.jpeg" alt="">
+                <h3>Suchitra Mallik</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/doc-5.jpeg" alt="">
+                <h3>Monalisa</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/doc-6.jpeg" alt="">
+                <h3>Malay</h3>
+                <span>export developer</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- Doctor section ends -->
+
+
+
 
     <!-- custom script file link -->
     <script src="./script/script.js"></script>
