--- a/index.html
+++ b/index.html
@@ -243,6 +243,54 @@
 </section>
 <!-- Booking section ends -->
 
+<!-- Footer section starts -->
+    <section class="footer">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#"> <i class="fas fa-chevron-right"></i> home </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> services </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> about </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> doctors </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> book </a>
+            </div>
+
+            <div class="box">
+                <h3>our services</h3>
+                <a href="#"> <i class="fas fa-chevron-right"></i> home </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> services </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> about </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> doctors </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> book </a>
+            </div>
+
+            <div class="box">
+                <h3>contact info</h3>
+                <a href="#"> <i class="fas fa-chevron-right"></i> +123-456-7890 </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> +122-456-7890 </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> inovica@gmail.com </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> abcd@inovica.com </a>
+                <a href="#"> <i class="fas fa-chevron-right"></i> Bhubaneswar , odisha - 897654 </a>
+            </div>
+
+            <div class="box">
+                <h3>follow us</h3>
+                <a href="#"> <i class="fab fa-facebook"></i> facebook </a>
+                <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
+                <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
+                <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
+                <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+                <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
+            </div>
+
+            <div class="credit">created by <span>mr web designer</span> | all rights reserved | </div>
+
+        </div>
+
+    </section>
+<!-- Footer section ends -->
 
 
     <!-- custom script file link -->
