--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="#home">Home</a>
             <a href="#service">Service</a>
             <a href="#about">About</a>
-            <a href="#team">Team</a>
+            <!-- <a href="#team">Team</a> -->
             <a href="#book">Book</a>
             <a href="contact.html">Contact Us</a>
         </nav>
