--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#home">Home</a>
             <a href="#service">Service</a>
             <a href="#about">About</a>
-            <a href="#team">Team</a>
+            <!-- <a href="#team">Team</a> -->
             <a href="#book">Book</a>
             <a href="contact.html">Contact Us</a>
         </nav>
@@ -134,9 +134,9 @@
             </div>
 
             <div class="content">
-                <h3>We take care of your healthy life</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque reiciendis recusandae aliquam, natus non voluptas repellat, voluptatem consequatur et nihil cumque laudantium sequi adipisci accusantium culpa quis nam. Minima, quia.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione cum dolor totam voluptates officia officiis reiciendis vitae </p>
+                <h3>We take care of your Business</h3>
+                <p>At Innovica, we understand that seeking counselling can be a crucial step towards a better future.</p>
+                <p>Whether you're facing financial difficulties, seeking educational advice, or simply looking for personal growth, we are here to assist you every step of the way </p>
                 <a href="#" class="btn"> <span class="fas fa-chevron-right"></span> learn more</a>
             </div>
         </div>
@@ -144,7 +144,7 @@
 <!-- About section ends -->
 
 <!-- Doctor section Starts -->
-    <section class="doctors" id="doctors">
+    <!-- <section class="doctors" id="doctors">
 
         <h1 class="heading"> our <span>developers</span> </h1>
 
@@ -216,7 +216,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 <!-- Doctor section ends -->
 
 <!-- Booking section starts -->
